# learning-with-ai

./: .gitignore  CLAUDE.md  README.md  todo.md
caos/: CMakeLists.txt  GLOSSARY.md  NEXT_STEPS.md  PROGRESS.md  README.md  SETUP.md  run.sh
caos/capstone/: CMakeLists.txt  README.md
caos/capstone/app/: main.c
caos/capstone/include/: vm.h
caos/capstone/src/: vm.c
caos/capstone/tests/: test_vm.cpp
caos/cmake/: Helpers.cmake
caos/modules/00-setup/: CMakeLists.txt  README.md
caos/modules/00-setup/include/: warmup.h
caos/modules/00-setup/src/: warmup.c
caos/modules/00-setup/tests/: test_warmup.cpp
caos/modules/01-number-representation/: CMakeLists.txt  README.md
caos/modules/01-number-representation/include/: numrep.h
caos/modules/01-number-representation/src/: numrep.c
caos/modules/01-number-representation/tests/: test_numrep.cpp
caos/modules/02-bit-manipulation/: CMakeLists.txt  README.md
caos/modules/02-bit-manipulation/include/: bits.h
caos/modules/02-bit-manipulation/src/: bits.c
caos/modules/02-bit-manipulation/tests/: test_bits.cpp
caos/modules/03-integers-endianness/: CMakeLists.txt  README.md
caos/modules/03-integers-endianness/include/: integers.h
caos/modules/03-integers-endianness/src/: integers.c
caos/modules/03-integers-endianness/tests/: test_integers.cpp
caos/modules/04-floating-point/: CMakeLists.txt  README.md
caos/modules/04-floating-point/include/: floats.h
caos/modules/04-floating-point/src/: floats.c
caos/modules/04-floating-point/tests/: test_floats.cpp
caos/modules/05-memory-layout/: CMakeLists.txt  README.md
caos/modules/05-memory-layout/include/: memory.h
caos/modules/05-memory-layout/src/: memory.c
caos/modules/05-memory-layout/tests/: test_memory.cpp
caos/modules/06-arrays-strings/: CMakeLists.txt  README.md
caos/modules/06-arrays-strings/include/: cstrings.h
caos/modules/06-arrays-strings/src/: cstrings.c
caos/modules/06-arrays-strings/tests/: test_cstrings.cpp
caos/modules/07-assembly-machine/: CMakeLists.txt  README.md
caos/modules/07-assembly-machine/include/: machine.h
caos/modules/07-assembly-machine/src/: machine.c
caos/modules/07-assembly-machine/tests/: test_machine.cpp
caos/modules/08-cache-locality/: CMakeLists.txt  README.md
caos/modules/08-cache-locality/include/: lrucache.h
caos/modules/08-cache-locality/src/: lrucache.c
caos/modules/08-cache-locality/tests/: test_lrucache.cpp
caos/modules/09-allocators/: CMakeLists.txt  README.md
caos/modules/09-allocators/include/: arena.h
caos/modules/09-allocators/src/: arena.c
caos/modules/09-allocators/tests/: test_arena.cpp
caos/modules/10-processes-threads/: CMakeLists.txt  README.md
caos/modules/10-processes-threads/include/: threads.h
caos/modules/10-processes-threads/src/: threads.c
caos/modules/11-scheduling/: CMakeLists.txt  README.md
caos/modules/11-scheduling/include/: scheduling.h
caos/modules/12-virtual-memory/: CMakeLists.txt  README.md
caos/modules/13-concurrency-sync/: CMakeLists.txt  README.md
caos/modules/14-tooling/: CMakeLists.txt  README.md
cpp/: .gitignore  CMakeLists.txt  GLOSSARY.md  NEXT_STEPS.md  PROGRESS.md  README.md  SETUP.md  run.sh
cpp/capstone/: CMakeLists.txt  README.md
cpp/capstone/app/: main.cpp
cpp/capstone/include/: cache.hpp  command.hpp  database.hpp  kvstore.hpp  value.hpp
cpp/capstone/src/: command.cpp  database.cpp  kvstore.cpp  value.cpp
cpp/capstone/tests/: test_cache.cpp  test_command.cpp  test_concurrency.cpp  test_database.cpp  test_kvstore.cpp  test_value.cpp
cpp/cmake/: Helpers.cmake
cpp/modules/00-setup/: CMakeLists.txt  README.md
cpp/modules/01-basics/: CMakeLists.txt  README.md
cpp/modules/02-control-flow/: CMakeLists.txt  README.md
cpp/modules/03-pointers-memory/: CMakeLists.txt  README.md
cpp/modules/04-classes/: CMakeLists.txt  README.md
cpp/modules/05-copy-move/: CMakeLists.txt  README.md
cpp/modules/06-smart-pointers/: CMakeLists.txt  README.md
cpp/modules/07-templates/: CMakeLists.txt  README.md
cpp/modules/08-stl/: CMakeLists.txt  README.md
cpp/modules/09-error-handling/: CMakeLists.txt  README.md
cpp/modules/10-modern-idioms/: CMakeLists.txt  README.md
cpp/modules/11-projects/: CMakeLists.txt  README.md
cpp/modules/12-tooling/: CMakeLists.txt  README.md
cpp/modules/13-data-structures/: CMakeLists.txt  README.md
cpp/modules/14-concurrency/: CMakeLists.txt  README.md
cpp/modules/15-value-categories-move/: CMakeLists.txt  README.md
cpp/modules/16-templates-advanced/: CMakeLists.txt  README.md
cpp/modules/17-concepts-ranges/: CMakeLists.txt  README.md
cpp/modules/18-type-erasure/: CMakeLists.txt  README.md
cpp/modules/19-memory-allocators/: CMakeLists.txt  README.md
cpp/modules/20-concurrency-advanced/: CMakeLists.txt  README.md
cpp/modules/21-implement-stl/: CMakeLists.txt  README.md
cpp/modules/22-exception-safety-constexpr/: CMakeLists.txt  README.md
rust/: Cargo.toml  GLOSSARY.md  NEXT_STEPS.md  PROGRESS.md  README.md  SETUP.md  run.sh
rust/capstone/: Cargo.toml  README.md
rust/capstone/src/: command.rs  db.rs  lib.rs  main.rs  shared.rs  value.rs
rust/capstone/tests/: acceptance.rs
rust/modules/00-setup/: Cargo.toml  README.md
rust/modules/01-basics/: Cargo.toml  README.md
rust/modules/02-control-flow/: Cargo.toml  README.md
rust/modules/03-ownership/: Cargo.toml  README.md
rust/modules/04-borrowing/: Cargo.toml  README.md
rust/modules/05-structs/: Cargo.toml  README.md
rust/modules/06-enums-match/: Cargo.toml  README.md
rust/modules/07-error-handling/: Cargo.toml  README.md
rust/modules/08-collections/: Cargo.toml  README.md
rust/modules/09-generics-traits/: Cargo.toml  README.md
rust/modules/10-trait-objects/: Cargo.toml  README.md
rust/modules/11-closures-iterators/: Cargo.toml  README.md
rust/modules/12-lifetimes-slices/: Cargo.toml  README.md
rust/modules/13-smart-pointers/: Cargo.toml  README.md
rust/modules/14-tooling/: Cargo.toml  README.md
rust/modules/15-concurrency/: Cargo.toml  README.md
rust/modules/16-async/: Cargo.toml  README.md
(+789 files in other folders)
