# Капстоун курса Rust — minidb.
#
# Этот крейт особенный: он одновременно БИБЛИОТЕКА (src/lib.rs) и ПРИЛОЖЕНИЕ
# (src/main.rs). Библиотеку используют приёмочные тесты (tests/acceptance.rs) и
# бинарник REPL. Внешних зависимостей нет — только стандартная библиотека:
# std::collections::HashMap, std::sync::{Arc, Mutex}, std::thread, std::fs/io.
#
# Тебе НЕ нужно редактировать этот файл во время прохождения капстоуна.
[package]
name = "minidb"
version = "0.1.0"
edition = "2021"

# Явно объявляем обе цели — чтобы было видно, что крейт даёт и lib, и bin.
[lib]
name = "minidb"
path = "src/lib.rs"

[[bin]]
name = "minidb"
path = "src/main.rs"

[dependencies]
