[package]
name = "m16_async"
version = "0.1.0"
edition = "2021"

[dependencies]
# Единственное исключение во всём курсе: этот модуль зависит от внешнего крейта.
# `futures` даёт нам прозрачный учебный executor (block_on), join!/join_all,
# async-каналы и Stream — всё, что в продакшене обычно берут из tokio, но здесь
# двигатель остаётся на виду.
futures = "0.3"
